--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,9 @@
     "eslint-config-next": "13.2.4",
     "js-cookie": "^3.0.1",
     "next": "^13.2.4",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.2",
     "swr": "^2.1.2"
   }
 }
